--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
-.DS_Store
+# NPM deps
 node_modules
 
-/.cache
-/functions/\[\[path\]\].js
-/functions/\[\[path\]\].js.map
-/public/build
-.dev.vars
+# Remix
+.cache/
+functions/\[\[path\]\].js
+functions/\[\[path\]\].js.map
+public/build/
