--- a/package.json
+++ b/package.json
@@ -12,13 +12,11 @@
   "scripts": {
     "build": "remix build",
     "dev": "remix dev --no-restart -c \"npm run start\"",
-    "start": "wrangler pages dev --compatibility-date=2023-06-21 ./public",
-    "typecheck": "tsc"
+    "start": "wrangler pages dev --compatibility-date=2023-06-21 ./public"
   },
   "dependencies": {
     "@remix-run/cloudflare": "^1.18.1",
     "@remix-run/cloudflare-pages": "^1.18.1",
-    "@remix-run/css-bundle": "^1.18.1",
     "@remix-run/react": "^1.18.1",
     "isbot": "^3.6.8",
     "react": "^18.2.0",
