--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@remix-run/react": "^1.18.1",
     "isbot": "^3.6.12",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "thirty-two": "^1.0.2"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^3.19.0",
