--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@remix-run/node": "^1.18.1",
     "@remix-run/react": "^1.18.1",
+    "firebase-admin": "^11.9.0",
     "isbot": "^3.6.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
