--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
     "dev": "remix dev"
   },
   "dependencies": {
+    "@conform-to/react": "^0.7.2",
+    "@conform-to/zod": "^0.7.2",
     "@remix-run/node": "^1.18.1",
     "@remix-run/react": "^1.18.1",
     "firebase-admin": "^11.9.0",
     "isbot": "^3.6.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "thirty-two": "^1.0.2"
+    "thirty-two": "^1.0.2",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.18.1",
