--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "isbot": "^3.6.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "resend": "^0.16.0",
     "thirty-two": "^1.0.2",
     "zod": "^3.21.4"
   },
