--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "firebase-admin": "^11.9.0",
     "isbot": "^3.6.12",
     "react": "^18.2.0",
+    "react-aria-components": "1.0.0-alpha.5",
     "react-dom": "^18.2.0",
     "remix-auth": "^3.5.0",
     "resend": "^0.16.0",
