--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "sideEffects": false,
   "scripts": {
     "build": "remix build",
-    "dev": "remix dev"
+    "dev": "remix dev",
+    "format": "prettier --write ."
   },
   "dependencies": {
     "@conform-to/react": "^0.7.2",
@@ -35,6 +36,8 @@
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "eslint": "^8.44.0",
+    "prettier": "^3.0.0",
+    "prettier-plugin-tailwindcss": "^0.4.0",
     "remix-flat-routes": "^0.5.10",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.1.6",
