--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@conform-to/zod": "^0.7.2",
     "@remix-run/node": "^1.18.1",
     "@remix-run/react": "^1.18.1",
+    "clsx": "^1.2.1",
     "firebase-admin": "^11.9.0",
     "isbot": "^3.6.12",
     "react": "^18.2.0",
@@ -25,6 +26,8 @@
     "react-dom": "^18.2.0",
     "remix-auth": "^3.5.0",
     "resend": "^0.16.0",
+    "tailwind-merge": "^1.13.2",
+    "tailwindcss": "^3.3.2",
     "thirty-two": "^1.0.2",
     "zod": "^3.21.4"
   },
@@ -39,8 +42,6 @@
     "prettier": "^3.0.0",
     "prettier-plugin-tailwindcss": "^0.4.0",
     "remix-flat-routes": "^0.5.10",
-    "tailwindcss": "^3.3.2",
-    "typescript": "^5.1.6",
-    "wrangler": "^3.1.2"
+    "typescript": "^5.1.6"
   }
 }
